plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.backend'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(24)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
    //implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.liquibase:liquibase-core'
    implementation 'org.projectlombok:lombok:1.18.34'
//	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	compileOnly 'org.projectlombok:lombok'
	implementation 'org.mapstruct:mapstruct:1.6.3'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	testImplementation 'io.rest-assured:rest-assured:5.5.5'
	testImplementation 'io.rest-assured:json-path:5.5.5'
	testImplementation 'io.rest-assured:xml-path:5.5.5'
	testImplementation 'io.rest-assured:json-schema-validator:5.5.5'
	testImplementation 'io.rest-assured:spring-mock-mvc:5.5.5'
	testImplementation 'io.rest-assured:spring-web-test-client:5.5.5'
	testImplementation 'io.rest-assured:kotlin-extensions:5.5.5'
	testImplementation 'org.hamcrest:hamcrest:3.0'
	testImplementation 'org.hamcrest:hamcrest-library:3.0'

	testImplementation 'io.cucumber:cucumber-java:7.23.0'
	testImplementation 'io.cucumber:cucumber-java8:7.23.0'
	testImplementation 'io.cucumber:cucumber-junit:7.23.0'
	testImplementation 'io.cucumber:cucumber-spring:7.23.0'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

//tasks.withType(JavaCompile).configureEach {
//	options.compilerArgs += [
//			'--enable-native-access=ALL-UNNAMED'
//	]
//}

//bootRun{
//	jvmArgs = ["--enable-native-access=ALL-UNNAMED"]
//}

//tasks.withType(JavaExec).configureEach {
//	jvmArgs += [
//			"--add-opens", "java.base/java.lang=ALL-UNNAMED",
//			"--add-opens", "java.base/sun.misc=ALL-UNNAMED",
//			"--enable-native-access=ALL-UNNAMED"
//	]
//}
